--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,6 @@ footer {
   inset: 0;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
   z-index: 10;
 }
 
@@ -114,6 +113,7 @@ footer {
   inset: 0;
   background: #030615;
   opacity: 0.9;
+  height: 100%;
 }
 
 .sidebarContents {
@@ -125,6 +125,7 @@ footer {
   position: relative;
   height: 100%;
   width: 80%;
+  overflow-y: scroll;
   max-width: 800px;
   margin-left: auto;
   background: #030615;
