--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,12 @@
 .imgContainer {
   display: flex;
   flex-direction: column;
+  max-height: 100vh;
 }
 
 .bgImage {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   flex: 1;
   object-fit: cover;
 }
